--- a/views/admin/package/create.ejs
+++ b/views/admin/package/create.ejs
@@ -57,27 +57,31 @@
                                                 </select>
                                             </div>
                                         </div>
-                                        <div class="col-xl-4 col-md-6 col-12 mb-1">
+                                        <div class="col-xl-6 col-md-6 col-12 mb-1 m">
                                             <div class="form-group">
                                                 <label for="facilities">Facilities</label>
-                                                <select class="form-control" id="facilities" name="package[facilities]" >
-                                                    <option label="Select Facilities"></option>
+                                                <div class="row mr-1 ml-1">
                                                     <% for(let facility of data['facility']){ %>
-                                                        <option value="<%= facility._id %> "><%= facility.name  %> </option>
+                                                        <div class="custom-control custom-control-success custom-checkbox mb-1 col-md-6">
+                                                            <input type="checkbox" class="custom-control-input" name="package[facilities]" id="colorCheck<%= facility._id %>" value="<%= facility._id %>">
+                                                            <label class="custom-control-label" for="colorCheck<%= facility._id %>"><%= facility.name  %></label>
+                                                        </div>
                                                     <%  } %>
-                                                </select>
+                                                </div>
                                             </div>
                                         </div>
-                                        <div class="col-xl-4 col-md-6 col-12 mb-1">
+                                        
+                                        <div class="col-xl-6 col-md-6 col-12 mb-1">
                                             <div class="form-group">
-                                                <label for="ammenities">Ammenities</label>
-                                                <select class="form-control" id="ammenities" name="package[ammenities]">
-                                                    <option label="Select Ammenities"></option>
+                                                <h5>Ammenities</h5>
+                                                <div class="row mr-1 ml-1">
                                                     <% for(let amenities of data['amenities']){ %>
-                                                        <option value="<%= amenities._id %>"><%= amenities.name  %> </option>
+                                                        <div class="custom-control custom-control-success custom-checkbox mb-1 col-md-6">
+                                                            <input type="checkbox" class="custom-control-input" name="package[ammenities]" id="colorCheck<%= amenities._id %>" value="<%= amenities._id %>">
+                                                            <label class="custom-control-label" for="colorCheck<%= amenities._id %>"><%= amenities.name  %></label>
+                                                        </div>
                                                     <%  } %>
-                                                    
-                                                </select>
+                                                </div>
                                             </div>
                                         </div>
                                         <div class="col-xl-12 col-md-12 col-12 mb-1">
